--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "node-fecth": "^0.0.1-security",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
