--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
     "pdfjs-dist": "^2.16.105",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.0",
     "xmlbuilder": "^15.1.1",
     "xmlbuilder2": "^3.1.1"
